Fix resource leak in DownloadFileTasklet and replace deprecated URL constructor